fixed paragrafi mossa 1

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                             <div class="separator"></div><!-- separator -->
 
                             <div class="row">
-                                <div class="col-lg-2 col-md-2 col-sm-2 text-center">
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
                                     &nbsp;
                                 </div>
 
-                                <div class="col-lg-8 col-md-8 col-sm-8 text-center">
+                                <div class="col-lg-10 col-md-10 col-sm-10 text-center">
                                     <img src="img/silouette.png" alt="icon" class="round-icon img-people"  />                                                                
-                                    <p>                                    
-                                        Se ti interessa effettuare acquisti da <b>produttori locali, a filiera corta e sostenibili</b> dal punto di vista ambientale e sociale parlane con amici o conoscenti. 
+                                    <p class="p3">                                    
+                                        Se ti interessa effettuare acquisti da <b>produttori locali, a filiera corta e sostenibili</b> dal punto di vista ambientale e sociale parlane con amici o conoscenti.<br /> 
                                         Possono essere <b>persone del tuo condominio</b>, oppure <b>famiglie</b> incontrate in parrocchia, ma anche i <b>colleghi</b> di lavoro, le <b>compagne</b> della squadra di pallavolo, gli <b>amici</b> del circolo...
                                     </p>
                                     <div class="separator"></div><!-- separator -->
@@ -157,7 +157,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-2 col-md-2 col-sm-2 text-center">
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
                                     &nbsp;
                                 </div>
                             </div><!-- row -->
