--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                       <li><a href="#chiarite-idee">CHIARITEVI LE IDEE</a></li>
                                       <li><a href="#cosa-comprare">COSA COMPRARE</a></li>
                                       <li><a href="#altri-gas">SERVE UNA MANO?</a></li>
-                                      <li><a href="#primo-acquisto">IL PRIMO ACQUISTO</a></li>
+                                      <li><a href="#primo-ordine">IL PRIMO ACQUISTO</a></li>
                                       <li><a href="#gallery">CONTINUATE COSÌ</a></li>
                                     </ul>
                               </div><!-- /.navbar-collapse -->
@@ -543,7 +543,7 @@
                                         Ormai sapete quanto basta, non rimane che provare.
                                     </p>
                                     <div>
-                                        <a href="#altri-gas" class="btn">
+                                        <a href="#primo-ordine" class="btn">
                                             <div class="btn_box btn_box_m4"><b>VAI ALL'ULTIMA MOSSA</b></div><br />
                                             <div class="btn_arrow btn_arrow_m4">&nbsp;</div>
                                         </a>
@@ -558,55 +558,69 @@
 
 <!-- MOSSA 5 : IL PRIMO ORDINE -->
                 <section>
-                <div class="splash-image-wrap" id="splash-image-wrap">
-                    <div class="m5-splash-image col-mg-12" id="splash-image" data-0="background-position:center 0px;" data-10000="background-position:center -2000px;">
-
-                        <div class="flexslider flexslider-splash-m5">
+                <div class="l-primo-ordine-section l-section" id="primo-ordine">
+                    <div class="container text-center">
+                        <div class="flexslider flexslider-m5">
                             <ul class="slides">
-                                <li class="slide-background">
-                                    <div class="splash-wrap slider-background">
-                                        <div class="splash-content">
-                                            <div class="container">
-                                                <div class="col-lg-9 div-centered">                                        
-                                                    <div class="splash-centering" >
-                                                        <h1>MOTION DESIGN <br />MOTION WITH STYLE</h1>
-                                                        <div class="splash-text">
-                                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                        </div><!-- splash-text -->
-                                                        <a href="#page-section" class="btn">Read More</a> <a href="#whatwedo" class="btn second-btn">What we do?</a>
-                                                    </div><!-- splash-centering -->
-                                                </div><!-- span12 -->
-                                            </div><!-- container -->
-                                        </div><!-- splash-title -->
-                                    </div><!-- splash-wrap -->
+                                <li>
+                                    <!-- row -->
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <p class="text-center"><img src="img/n3.png" alt="Mossa numero 5: Il primo ordine" /></p>
+                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
+                                            <p class="text-center sottotitolo_big1">
+                                                <b>Dal produttore a casa tua. Si comincia!</b>
+                                            </p>
+                                            <p><img src="img/visita_m5.png" alt="La visita" /></p>
+                                        </div><!-- col-lg-12 -->
+                                    </div>
+                                    <div class="separator"></div><!-- separator -->
                                 </li>
                                 <li>
-                                    <div class="splash-wrap">
-                                        <div class="splash-content">
-                                            <div class="container">
-                                                <div class="col-lg-9 div-centered">                                        
-                                                    <div class="splash-centering" >
-                                                        <h1>OLD DESIGN STUDIO <br />NEW STYLE METHODS</h1>
-                                                        <div class="clearfix"></div>
-                                                        <div class="splash-text">
-                                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                                                        </div><!-- splash-text -->
-                                                        <a href="#page-section" class="btn">Read More</a> <a href="#whatwedo" class="btn second-btn">What we do?</a>
-                                                    </div><!-- splash-centering -->
-                                                </div><!-- span12 -->
-                                            </div><!-- container -->
-                                        </div><!-- splash-title -->
-                                    </div><!-- splash-wrap -->
+                                    <!-- row -->
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <p class="text-center"><img src="img/n4.png" alt="Mossa numero 5: Il primo ordine" /></p>
+                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
+                                            <p class="text-center sottotitolo_big1">
+                                                <b>Dal produttore a casa tua. Si comincia!</b>
+                                            </p>
+                                            <p><img src="img/prezzogiusto_m5.png" alt="La visita" /></p>
+                                        </div><!-- col-lg-12 -->
+                                    </div>
+                                    <div class="separator"></div><!-- separator -->
+                                </li>                                
+                                <li>
+                                    <!-- row -->
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <p class="text-center"><img src="img/n4.png" alt="Mossa numero 5: Il primo ordine" /></p>
+                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
+                                            <p class="text-center sottotitolo_big1">
+                                                <b>Dal produttore a casa tua. Si comincia!</b>
+                                            </p>
+                                            <p><img src="img/ordine_m5.png" alt="La visita" /></p>
+                                        </div><!-- col-lg-12 -->
+                                    </div>
+                                    <div class="separator"></div><!-- separator -->
+                                </li>                                
+                                <li>
+                                    <!-- row -->
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <p class="text-center"><img src="img/n4.png" alt="Mossa numero 5: Il primo ordine" /></p>
+                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
+                                            <p class="text-center sottotitolo_big1">
+                                                <b>Dal produttore a casa tua. Si comincia!</b>
+                                            </p>
+                                            <p><img src="img/distribuzione_m5.png" alt="La visita" /></p>
+                                        </div><!-- col-lg-12 -->
+                                    </div>
+                                    <div class="separator"></div><!-- separator -->
                                 </li>                                
                             </ul>
                         </div><!-- flexslider -->
-
-                        <div class="arrow-wrap">
-                            <div class="bottom-arrow"></div>
-                        </div><!-- arrow-wrap -->
-
-
-                    </div><!-- m-splash-image -->
+                    </div>
                 </div><!-- splash-image-wrap --> 
                 </section>
 
@@ -927,9 +941,6 @@
         <!-- skrollr -->
         <script type="text/javascript" src="inc/skrollr/dist/skrollr.min.js"></script>
 
-        <!-- easy pie chart -->
-        <script src="inc/easy-pie-chart/dist/jquery.easypiechart.min.js"></script>
-        
         <!-- isotope -->
         <script src="inc/isotope/jquery.isotope.min.js" ></script>
         <script src="inc/isotope/jquery.isotope.sloppy-masonry.js" ></script>
