fixed space btn "restiamo in contatto"

--- a/index.html
+++ b/index.html
@@ -746,7 +746,8 @@
                         </div><!-- l-gallery-posts -->
                         
                         <div class="separator"></div><!-- separator -->
-                        <div class="row">
+                        <div class="separator"></div><!-- separator -->
+                        <div class="row" style="margin: 30px 0;">
                             <div class="col-lg-1 col-md-1 col-sm-1 text-center">&nbsp;</div>
                             <div class="col-lg-10 col-md-10 col-sm-10 text-center">
                                 <div>
@@ -758,7 +759,7 @@
                             </div>
                             <div class="col-lg-1 col-md-1 col-sm-1 text-center">&nbsp;</div>
                         </div><!-- row -->
-                        
+                        <div class="separator"></div><!-- separator -->
                     </div><!-- l-section -->
                 </section>
 
