Conclusa ultima pagina "Contatti"

--- a/index.html
+++ b/index.html
@@ -768,17 +768,72 @@
                 <section>
                     <div class="l-map-section l-section" id="contatti">
                         <div class="container">
-                            <h4 class="text-center">Contact Us</h4>
+                            <!-- row -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <p class="text-center"><img src="img/marchio_piccolo.png" alt="Logo Apri un GAS in 5 mosse" /></p>
+                                    <p class="text-center paragrafo_big1 pmc">                                    
+                                        Un progetto del G.A.S. "Le" Giare aderente al Distretto di Economia Solidale di Reggio Emilia e realizzato col contributo del Comune di Reggio Emilia, nell’ambito de "I Reggiani per Esempio 2014"<br />
+                                        <br />
+                                        <br />
+                                        <b>Info e contatti:</b>
+                                    </p>
+                                </div><!-- col-lg-12 -->
+                            </div>
+                            <div class="separator"></div><!-- separator -->
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center">&nbsp;</div>
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
+                                    <p>
+                                        <a href="mailto:des.reggioemilia@gmail.com"><img src="img/icona_mail.png" alt="Email" /></a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
+                                    <p>
+                                        <a href="http://www.desreggioemilia.it"><img src="img/icona_sito.png" alt="Sito web" /></a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
+                                    <p>
+                                        <a href="https://www.facebook.com/pages/desreggioemilia/414468328600976"><img src="img/icona_FB.png" alt="Facebook" /></a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1 text-center">
+                                    <p>
+                                        <a href="https://twitter.com/DESREGGIO"><img src="img/icona_TW.png" alt="Twitter" /></a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4 text-center">&nbsp;</div>
+                            </div><!-- row -->
+                            <div class="separator"></div><!-- separator -->
+                            <div class="separator"></div><!-- separator -->
+                            <div class="row">
+                                <div class="col-lg-2 col-md-2 col-sm-2 text-center">&nbsp;</div>
+                                <div class="col-lg-3 col-md-3 col-sm-3 text-center">
+                                    <p>
+                                        <img src="img/marchio_DES.png" alt="Logo DES" />
+                                    </p>
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-2 text-center">&nbsp;</div>
+                                <div class="col-lg-3 col-md-3 col-sm-3 text-center">
+                                    <p>
+                                        <img src="img/RPE.png" alt="Logo RPE" />
+                                    </p>
+                                </div>
+                                <div class="col-lg-2 col-md-2 col-sm-2 text-center">&nbsp;</div>
+                            </div><!-- row -->
+                            <div class="separator"></div><!-- separator -->
+                            <div class="separator"></div><!-- separator -->
+                            
                             <div class="m-heading-border"></div><!-- m-heading-border -->
-                            <p class="text-center">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae scelerisque nibh. 
-                                Morbi fermentum ipsum odio, id dictum leo egestas vel. Sed commodo, nunc eget ultrices viverra, turpis odio luctus nisl, sit amet porttitor diam nulla in augue. 
-                                Etiam eu felis libero. Nam feugiat ultrices sapien eget sagittis.
-                            </p>           
+                            <p class="text-center pmc-footer">
+                                APRI UN GAS IN 5 MOSSE<br />
+                                Un’idea di <b>Claudio Falduto</b> (G.A.S. Le Giare - RE) - Ideazione, progetto grafico e testi: <b>Marco Appiotti</b> (G.A.S. Iqbal Masih - RE)<br />
+                                Web developer: <b>Davide Gullo</b> (G.A.S. Iqbal Masih - RE) - <a href="http://www.igruppi.com">iGruppi</a> è un gestionale "Free Software" per i Gruppi di Acquisto Solidali</p>
                             <div class="clearfix"></div><!-- clearfix -->
-                              </div><!-- container -->
-                            <!-- google map -->
-                            <div id="map" style="width:100%; height:500px;" class="opacity" ></div>
+                            <div class="separator"></div><!-- separator -->
+                            <div class="separator"></div><!-- separator -->
+                        </div><!-- container -->
                     </div><!-- l-latest-posts -->
                 </section>
 
