--- a/index.html
+++ b/index.html
@@ -479,76 +479,65 @@
                 <section>
                 <div class="l-primo-ordine-section l-section" id="primo-ordine">
                     <div class="container text-center">
+                        <!-- row -->
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <p class="text-center"><img src="img/n5.png" alt="Mossa numero 5: Il primo ordine" /></p>
+                                <h2 class="text-center titolo_big1">Il primo ordine</h2>
+                                <p class="text-center sottotitolo_big1">
+                                    <b>La filiera cortissima dei G.A.S.</b>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="separator"></div><!-- separator -->
+
                         <div class="flexslider flexslider-m5">
                             <ul class="slides">
                                 <li>
                                     <!-- row -->
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <p class="text-center"><img src="img/n5.png" alt="Mossa numero 5: Il primo ordine" /></p>
-                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
-                                            <p class="text-center sottotitolo_big1">
-                                                <b>La filiera è cortissima dei G.A.S.</b>
-                                            </p>
                                             <p><img src="img/visita_m5.png" alt="La visita" /></p>
                                             <h3>LA VISITA</h3>
-                                            <p class="text-center pm5">
+                                            <p class="paragrafo_big1 text-center pm5">
                                                 <b>Contattate il primo produttore e andate a trovarlo.</b> Fatevi raccontare come produce, la sua storia e i progetti che ha. Conoscere le persone è importante: si imparano un sacco di cose, si passa qualche ora insieme in modo diverso e alla fine anche i bambini si sono divertiti. <b>Per questo si chiama "economia delle relazioni".</b><br />
                                                 <a href="#" target="_blank">Guarda le foto di alcune visite ai produttori locali.</a>
                                             </p>
                                         </div><!-- col-lg-12 -->
                                     </div>
-                                    <div class="separator"></div><!-- separator -->
                                 </li>
                                 <li>
                                     <!-- row -->
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <p class="text-center"><img src="img/n5.png" alt="Mossa numero 5: Il primo ordine" /></p>
-                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
-                                            <p class="text-center sottotitolo_big1">
-                                                <b>Dal produttore a casa tua. Si comincia!</b>
-                                            </p>
                                             <p><img src="img/prezzogiusto_m5.png" alt="La visita" /></p>
                                             <h3>IL PREZZO GIUSTO</h3>
-                                            <p class="text-center pm5">
+                                            <p class="paragrafo_big1 text-center pm5">
                                                 <b>Durante la visita si stabiliscono anche gli accordi:</b> il listino prezzi, le quantità minime, modi e tempi per la consegna.
                                             </p>
                                         </div><!-- col-lg-12 -->
                                     </div>
-                                    <div class="separator"></div><!-- separator -->
                                 </li>                                
                                 <li>
                                     <!-- row -->
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <p class="text-center"><img src="img/n5.png" alt="Mossa numero 5: Il primo ordine" /></p>
-                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
-                                            <p class="text-center sottotitolo_big1">
-                                                <b>Dal produttore a casa tua. Si comincia!</b>
-                                            </p>
                                             <p><img src="img/ordine_m5.png" alt="La visita" /></p>
                                             <h3>L'ORDINE</h3>
-                                            <p class="text-center pm5">
+                                            <p class="paragrafo_big1 text-center pm5">
                                                 Tornati a casa il referente può aprire l’ordine con <b>pochi click</b>: il Distretto di Economia Solidale mette infatti a disposizione <b>iGruppi</b>, un <b>software dedicato</b> per gestire gli ordini online in modo semplice.<br />
                                                 <a href="http://www.igruppi.com" target="_blank">Clicca qui per provare la versione demo.</a>
                                             </p>
                                         </div><!-- col-lg-12 -->
                                     </div>
-                                    <div class="separator"></div><!-- separator -->
                                 </li>                                
                                 <li>
                                     <!-- row -->
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <p class="text-center"><img src="img/n5.png" alt="Mossa numero 5: Il primo ordine" /></p>
-                                            <h2 class="text-center titolo_big1">Il primo ordine</h2>
-                                            <p class="text-center sottotitolo_big1">
-                                                <b>Dal produttore a casa tua. Si comincia!</b>
-                                            </p>
                                             <p><img src="img/distribuzione_m5.png" alt="La visita" /></p>
                                             <h3>LA DISTRIBUZIONE</h3>
-                                            <p class="text-center pm5">
+                                            <p class="paragrafo_big1 text-center pm5">
                                                 Nel giro di qualche giorno il produttore consegna la merce: <b>chi ha ordinato si reca dal referente per il ritiro</b>. Durante la consegna si approffitta per far quattro chiacchiere, a volte ci scappa un bicchiere di vino: insomma una cosa un po’ diversa da carrello e salvatempo!
                                             </p>
                                             
@@ -572,7 +561,6 @@
                                             
                                         </div><!-- col-lg-12 -->
                                     </div>
-                                    <div class="separator"></div><!-- separator -->
                                 </li>                                
                             </ul>
                         </div><!-- flexslider -->
