new image Fermento Naturale

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                                         </div><!-- gallery-cell -->
                                     </div><!-- gallery-hover-wrap -->                                                                
                                 </div><!-- gallery-hover -->
-                                <img src="img/img_cosi_fermentonaturale.jpg" alt="gallery image" />
+                                <img src="img/img_cosi_fermentonaturale.png" alt="gallery image" />
                             </div>
                             
                             <!-- gallery-post 7 -->
