fixed links gallery

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                 <div class="gallery-hover terre-re">
                                     <div class="gallery-hover-wrap">
                                         <div class="gallery-cell text-center">
-                                            <h5><a href="https://acquapubblicare.wordpress.com/" target="_blank" class="image-link">VERSO TERRE DI REGGIO EMILIA</a></h5>
+                                            <h5><a href="https://terredireggioemilia.wordpress.com/" target="_blank" class="image-link">VERSO TERRE DI REGGIO EMILIA</a></h5>
                                             <div class="title-border"></div>                                        
                                             <div class="gallery-category">
                                                 <p>Acquisizione Partecipata<br />
@@ -674,7 +674,7 @@
                                 <div class="gallery-hover acquabenecomune">
                                     <div class="gallery-hover-wrap">
                                         <div class="gallery-cell text-center">
-                                            <h5><a href="#" target="_blank" class="image-link">COMITATO<br />ACQUA BENE COMUNE</a></h5>
+                                            <h5><a href="https://acquapubblicare.wordpress.com/" target="_blank" class="image-link">COMITATO<br />ACQUA BENE COMUNE</a></h5>
                                             <div class="title-border"></div>                                        
                                             <div class="gallery-category">
                                                 <p>Per la Gestione Pubblica<br />
