Fixed Responsive per Tablet/Smartphone Nuovi pulsanti "Continua" per mosse

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                                 <div class="m-arrow"></div>
                                             </div><!-- m-arrow-wrap -->
                                             <p>Per orientarvi potete consultare la lista dei produttori che forniscono gli altri G.A.S. del territorio.<br /> 
-                                                <a href="#" target="_blank">Scarica il PDF</a>
+                                                <a href="/Produttori_5Mosse.pdf" target="_blank">Scarica il PDF</a>
                                             </p>
                                             <div class="clearfix"></div>
                                         </div><!-- member-description -->
@@ -820,8 +820,9 @@
                             <div class="m-heading-border"></div><!-- m-heading-border -->
                             <p class="text-center pmc-footer">
                                 APRI UN GAS IN 5 MOSSE<br />
-                                Un’idea di <b>Claudio Falduto</b> (G.A.S. Le Giare - RE) - Ideazione, progetto grafico e testi: <b>Marco Appiotti</b> (G.A.S. Iqbal Masih - RE)<br />
-                                Web developer: <b>Davide Gullo</b> (G.A.S. Iqbal Masih - RE) - <a href="http://www.igruppi.com" target="_blank">iGruppi</a> è un gestionale "Free Software" per i Gruppi di Acquisto Solidali</p>
+                                Un’idea di <b>Claudio Falduto</b> (G.A.S. Le Giare - RE) - Ideazione, progetto grafico e testi di <b>Marco Appiotti</b> (G.A.S. Iqbal Masih - RE)<br />
+                                Sviluppato da <b>Davide Gullo</b> (G.A.S. Iqbal Masih - RE) basato sul template <a href="http://wpidiots.com/html/ravan/standard/">Ravan</a><br />
+                                <a href="http://www.igruppi.com" target="_blank">iGruppi</a> è un gestionale "Free Software" per i Gruppi di Acquisto Solidali</p>
                             <div class="clearfix"></div><!-- clearfix -->
                             <div class="separator"></div><!-- separator -->
                             <div class="separator"></div><!-- separator -->
