Added foto gallery links

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                             <h3>LA VISITA</h3>
                                             <p class="paragrafo_big1 text-center pm5">
                                                 <b>Contattate il primo produttore e andate a trovarlo.</b> Fatevi raccontare come produce, la sua storia e i progetti che ha. Conoscere le persone è importante: si imparano un sacco di cose, si passa qualche ora insieme in modo diverso e alla fine anche i bambini si sono divertiti. <b>Per questo si chiama "economia delle relazioni".</b><br />
-                                                <a href="#" target="_blank">Guarda le foto di alcune visite ai produttori locali.</a>
+                                                <a href="http://www.desreggioemilia.it/wp/apri-un-g-a-s-in-5-mosse-fotogallery/" target="_blank">Guarda le foto di alcune visite ai produttori locali.</a>
                                             </p>
                                         </div><!-- col-lg-12 -->
                                     </div>
