correzione errori ortografici

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p class="text-center"><img src="img/n2.png" alt="Mossa numero 2: Convocate un'incontro per parlarne" /></p>
-                                    <h2 class="text-center titolo_big1">Convocate un'incontro per parlarne</h2>
+                                    <h2 class="text-center titolo_big1">Convocate un incontro per parlarne</h2>
                                     <p class="text-center sottotitolo_big1">
                                         <b>Dal momento che vi trovate siete già un GRUPPO.</b>
                                     </p>
@@ -726,7 +726,7 @@
                                 <div class="col-lg-12">
                                     <p class="text-center"><img src="img/marchio_piccolo.png" alt="Logo Apri un GAS in 5 mosse" /></p>
                                     <p class="text-center paragrafo_big1 pmc">                                    
-                                        Un progetto del G.A.S. "Le" Giare aderente al Distretto di Economia Solidale di Reggio Emilia e realizzato col contributo del Comune di Reggio Emilia, nell’ambito de "I Reggiani per Esempio 2014"<br />
+                                        Un progetto del G.A.S. "Le Giare" aderente al Distretto di Economia Solidale di Reggio Emilia e realizzato col contributo del Comune di Reggio Emilia, nell’ambito de "I Reggiani per Esempio 2014"<br />
                                         <br />
                                         <br />
                                         <b>Info e contatti:</b>
