Added link to github

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                             <p class="text-center pmc-footer">
                                 APRI UN GAS IN 5 MOSSE<br />
                                 Un’idea di <b>Claudio Falduto</b> (G.A.S. Le Giare - RE) - Ideazione, progetto grafico e testi di <b>Marco Appiotti</b> (G.A.S. Iqbal Masih - RE)<br />
-                                Sviluppato da <b>Davide Gullo</b> (G.A.S. Iqbal Masih - RE) basato sul template <a href="http://wpidiots.com/html/ravan/standard/">Ravan</a><br />
+                                Sito web sviluppato da <b>Davide Gullo</b> (G.A.S. Iqbal Masih - RE) basato sul template <a href="http://wpidiots.com/html/ravan/standard/">Ravan</a> e rilasciato su <a href="https://github.com/Jazzo/apriungasin5mosse">Github</a><br />
                                 <a href="http://www.igruppi.com" target="_blank">iGruppi</a> è un gestionale "Free Software" per i Gruppi di Acquisto Solidali</p>
                             <div class="clearfix"></div><!-- clearfix -->
                             <div class="separator"></div><!-- separator -->
