changed libro GAS mossa 2

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                             </div><!-- m-image-wrap -->
                                             <div class="news-content">
                                                 <p class="paragrafo_big1">
-                                                    <b>Per approfondire ecco una gustosa lettura.</b> Questo libro racconta i G.A.S. mettendo in fila storie, temi e punti di vista di chi ci ha provato. E risponde alle curiosità di chi ci vuol provare.
+                                                    <b>Per approfondire ecco una gustosa lettura.</b> Questo libro spiega in modo semplice e concreto che cosa sono i Gas, come funzionano gli acquisti collettivi, come organizzare gli ordini e le consegne.
                                                 </p>
                                                 <div class="clearfix"></div><!-- clearfix -->
                                             </div><!-- news-content -->
